--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>E-Nutt site</title>
 </head>
 <body>
-    <h1>hi im trying to build my own site</h1>
+    <h1>E-Nutt</h1>
+    <h2>i'm trying to build my own website</h2>
     <p>it begin with hello world</p>
 </body>
 </html>
