--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css" type="text/css">
     <title>E-Nutt site</title>
 </head>
 <body>
     <h1>E-Nutt</h1>
     <h2>i'm trying to build my own website</h2>
+    <h1 id="pertama">hi im trying to build my own site</h1>
     <p>it begin with hello world</p>
 </body>
 </html>
