very raw landing page css

--- a/index.html
+++ b/index.html
@@ -5,16 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <title>E-Nutt site</title>
 </head>
 <body>
-    <h1>hi im trying to build my own site</h1>
-    <h1>E-Nutt</h1>
-    <h2>i'm trying to build my own website</h2>
-    <h1 id="pertama">hi im trying to build my own site</h1>
-    <p>yaudah belajar git dulu deh</p>
-    <p>it begin with hello world</p>
-    <p>my style is going to be the bauhaus</p>
-    <h3>i dont know why i cant change my site's content from git</h3>
+    <div class="home-main">
+        <div class="">
+            <div class="grid-container">
+                <div class="grid-cell grid-item half-alive" style="grid-area: 1/2/2/3;">1</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 2/1/3/2;">2</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 2/2/3/3;">3</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 2/3/3/4;">4</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 3/1/4/2;">5</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 4/1/5/2;">6</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 4/2/5/3;">7</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 4/3/5/4;">8</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 1/2/span2/span2;">9</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 2/1/span2/2;">10</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 2/4/3/5;">11</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 1/7/2/9;">12</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 1/6/2/7;">15</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 2/7/3/8;">13</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 2/8/3/9;">14</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 2/5/4/6;">16</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 2/6/3/7;">17</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 4/5/5/7;">18</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 4/7/5/8;">19</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 3/8/4/9;">20</div>
+                    <div class="grid-cell centered alive moin-title">
+                        <h3 class="big-headline" style="font-family:'inter';">Moin!</h3>
+                    </div>
+                    <div class="grid-cell centered alive name-title" >
+                        <h3 class="big-headline" style="font-family:'inter';">I'm Rafdani <br> (e-nut)</h3>
+                    </div>
+                    <div class="grid-cell centered alive based-city">
+                        <h3 class="medium-headline" style="font-family:'inter';">Based in Berlin</h3>
+                    </div>
+                    <div class="grid-cell centered alive is-me">
+                        <h3 class="medium-headline small-text-block" style="font-family:'inter';">
+                            Front End developer with an eye of UI designer
+                        </h3>
+                    </div>
+                    <div class="grid-cell centered alive looking-job">
+                        <h3 class="medium-headline small-text-block" style="font-family:'inter';">
+                            just finished my bachelor's degree and currently looking for both a job and a collaborative project
+                        </h3>
+                    </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
