--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="home-main">
         <div class="">
             <div class="grid-container">
-                <div class="grid-cell grid-item half-alive" style="grid-area: 1/2/2/3;">1</div>
+                <grid class="grid-cell grid-item half-alive" style="grid-area: 1/2/2/3;">1</grid>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 2/1/3/2;">2</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 2/2/3/3;">3</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 2/3/3/4;">4</div>
