--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <div class="home-main">
         <div class="">
             <div class="grid-container">
-                <grid class="grid-cell grid-item half-alive" style="grid-area: 1/2/2/3;">1</grid>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 1/2/2/3;">1</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 2/1/3/2;">2</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 2/2/3/3;">3</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 2/3/3/4;">4</div>
-                <div class="grid-cell grid-item half-alive" style="grid-area: 3/1/4/2;">5</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 3/3/4/4;">5</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 4/1/5/2;">6</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 4/2/5/3;">7</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 4/3/5/4;">8</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 3/1/4/3;">21</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 1/2/span2/span2;">9</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 2/1/span2/2;">10</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 2/4/3/5;">11</div>
@@ -32,22 +33,23 @@
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 4/5/5/7;">18</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 4/7/5/8;">19</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 3/8/4/9;">20</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 5/3/6/4;">21</div>
                     <div class="grid-cell centered alive moin-title">
-                        <h3 class="big-headline" style="font-family:'inter';">Moin!</h3>
+                        <h3 class="big-headline" style="font-family:'Fredericka the great';">Moin!</h3>
                     </div>
                     <div class="grid-cell centered alive name-title" >
-                        <h3 class="big-headline" style="font-family:'inter';">I'm Rafdani <br> (e-nut)</h3>
+                        <h3 class="big-headline" style="font-family:'Fredericka the great';">I'm Rafdani <br> (e-nut)</h3>
                     </div>
                     <div class="grid-cell centered alive based-city">
-                        <h3 class="medium-headline" style="font-family:'inter';">Based in Berlin</h3>
+                        <h3 class="small-headline" style="font-family:'Fredericka the great';">Based in Berlin</h3>
                     </div>
                     <div class="grid-cell centered alive is-me">
-                        <h3 class="medium-headline small-text-block" style="font-family:'inter';">
+                        <h3 class="small-headline" style="font-family:'Fredericka the great';">
                             Front End developer with an eye of UI designer
                         </h3>
                     </div>
                     <div class="grid-cell centered alive looking-job">
-                        <h3 class="medium-headline small-text-block" style="font-family:'inter';">
+                        <h3 class="small-headline" style="font-family:'Fredericka the great';">
                             just finished my bachelor's degree and currently looking for both a job and a collaborative project
                         </h3>
                     </div>
@@ -57,3 +59,13 @@
     </div>
 </body>
 </html>
+
+<!-- <h5 class="small-headline" style="font-family: 'Inter';">this is small Headline</h5>
+
+                <p>I'm Thobie, a Frontend Developer and a Warzone TryHard currently living in Germany. 
+                    Ive worked at medium sized agencies as a working student. As a problem solver, 
+                    i specialize in merging both design, content and code together to provide easy-to-use, 
+                    unique and beautiful responsive websites that 
+                    serve to connect people and ideas.Outside of the internet, 
+                    you can find me at the gym or in Verdansk.
+                </p> -->
