--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" type="text/css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;600;700&display=swap&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <title>E-Nutt site</title>
 </head>
 <body>
@@ -35,28 +35,44 @@
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 3/8/4/9;">20</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 5/3/6/4;">21</div>
                     <div class="grid-cell centered alive moin-title">
-                        <h3 class="big-headline" style="font-family:'Fredericka the great';">Moin!</h3>
+                        <h3 class="big-headline" style="font-family:'Chakra Petch'; font-weight: 600;">Moin!</h3>
                     </div>
                     <div class="grid-cell centered alive name-title" >
-                        <h3 class="big-headline" style="font-family:'Fredericka the great';">I'm Rafdani <br> (e-nut)</h3>
+                        <h3 class="big-headline" style="font-family:'Chakra Petch';font-weight: 500;">I'm Rafdani <br> (e-nut)</h3>
                     </div>
                     <div class="grid-cell centered alive based-city">
-                        <h3 class="small-headline" style="font-family:'Fredericka the great';">Based in Berlin</h3>
+                        <h3 class="small-headline" style="font-family:'Chakra Petch';font-weight: 600;">Based in Berlin</h3>
                     </div>
                     <div class="grid-cell centered alive is-me">
-                        <h3 class="small-headline" style="font-family:'Fredericka the great';">
+                        <h3 class="small-headline" style="font-family:'Chakra Petch';font-weight: 500;">
                             Front End developer with an eye of UI designer
                         </h3>
                     </div>
                     <div class="grid-cell centered alive looking-job">
-                        <h3 class="small-headline" style="font-family:'Fredericka the great';">
+                        <h3 class="small-headline" style="font-family:'Chakra Petch';font-weight: 500;">
                             just finished my bachelor's degree and currently looking for both a job and a collaborative project
                         </h3>
                     </div>
             </div>
-        </div>
+            <h5 class="small-headline" style="font-family: 'Inter';">this is small Headline</h5>
 
+                <p style="font-family: 'Inter';">I'm Thobie, a Frontend Developer and a Warzone TryHard currently living in Germany. 
+                    Ive worked at medium sized agencies as a working student. As a problem solver, 
+                    i specialize in merging both design, content and code together to provide easy-to-use, 
+                    unique and beautiful responsive websites that 
+                    serve to connect people and ideas.Outside of the internet, 
+                    you can find me at the gym or in Verdansk.
+                </p>
+        </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Flip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Observer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/TextPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/EasePack.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/CustomEase.min.js"></script>
 </body>
 </html>
 
