--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
             <div class="grid-container">
                 <div class="grid-cell grid-item half-alive" style="grid-area: 1/2/2/3;">1</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 2/1/3/2;">2</div>
-                <div class="grid-cell grid-item half-alive" style="grid-area: 2/2/3/3;">3</div>
-                <div class="grid-cell grid-item half-alive" style="grid-area: 2/3/3/4;">4</div>
+                <div class="grid-cell grid-item half-alive" style="grid-area: 2/2/3/4;">3</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 3/3/4/4;">5</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 4/1/5/2;">6</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 4/2/5/3;">7</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 4/3/5/4;">8</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 3/1/4/3;">21</div>
-                <div class="grid-cell grid-item kill-cell" style="grid-area: 1/2/span2/span2;">9</div>
+                <div class="grid-cell grid-item kill-cell" style="grid-area: 1/2/3/4;">9</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 2/1/span2/2;">10</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 2/4/3/5;">11</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 1/7/2/9;">12</div>
@@ -34,14 +33,34 @@
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 4/7/5/8;">19</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 3/8/4/9;">20</div>
                 <div class="grid-cell grid-item half-alive" style="grid-area: 5/3/6/4;">21</div>
-                    <div class="grid-cell centered alive moin-title">
-                        <h3 class="big-headline" style="font-family:'Chakra Petch'; font-weight: 600;">Moin!</h3>
+
+                    <div class="grid-cell grid-item centered alive moin-title">
+                            <h3 class="big-headline greet" style="font-family:'Chakra Petch'; font-weight: 600;">Moin!</h3>
+                            <h3 class="big-headline greet" style="font-family:'Chakra Petch'; font-weight: 600;">Hi!</h3>
+                            <h3 class="big-headline greet" style="font-family:'Chakra Petch'; font-weight: 600;">Hallo!</h3>
+                            <h3 class="big-headline greet" style="font-family:'Chakra Petch'; font-weight: 600;">Hai!</h3>
                     </div>
                     <div class="grid-cell centered alive name-title" >
-                        <h3 class="big-headline" style="font-family:'Chakra Petch';font-weight: 500;">I'm Rafdani <br> (e-nut)</h3>
-                    </div>
+                        <div class="wrapper" id="name01">
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">Rafdani</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">e-nut</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">Rafdani</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">e-nut</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">Rafdani</h3>
+                        </div>
+                        <div class="wrapper" id="name02">
+                           
+                        </div>
+                     </div>
                     <div class="grid-cell centered alive based-city">
-                        <h3 class="small-headline" style="font-family:'Chakra Petch';font-weight: 600;">Based in Berlin</h3>
+                        <h3 class="small-headline based" style="font-family:'Chakra Petch';font-weight: 600; visibility: hidden;">Based in Berlin</h3>
+                        <img src="img/fernsehturm-berlin.png" alt="Fernsehturm" class="based" style="height:5rem"> 
+                        <img src="img/ubahn.svg" alt="U-bahn" class="based" id="ubahn" style="height: 3rem;">
                     </div>
                     <div class="grid-cell centered alive is-me">
                         <h3 class="small-headline" style="font-family:'Chakra Petch';font-weight: 500;">
@@ -66,6 +85,7 @@
         </div>
     </div>
 
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Flip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Observer.min.js"></script>
@@ -73,15 +93,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/TextPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/EasePack.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/CustomEase.min.js"></script>
+    <script src="main_animation.js"></script>
 </body>
+
 </html>
 
-<!-- <h5 class="small-headline" style="font-family: 'Inter';">this is small Headline</h5>
+<!-- DONT FORGET TO ADD IN FOOTER
+ -->
+<!-- <a href="https://www.flaticon.com/de/kostenlose-icons/fernsehturm-berlin" 
+    title="fernsehturm berlin Icons">Fernsehturm berlin Icons erstellt von Pixel
+     perfect - Flaticon</a> -->
 
-                <p>I'm Thobie, a Frontend Developer and a Warzone TryHard currently living in Germany. 
-                    Ive worked at medium sized agencies as a working student. As a problem solver, 
-                    i specialize in merging both design, content and code together to provide easy-to-use, 
-                    unique and beautiful responsive websites that 
-                    serve to connect people and ideas.Outside of the internet, 
-                    you can find me at the gym or in Verdansk.
-                </p> -->
+
