name-title fixed

--- a/index.html
+++ b/index.html
@@ -40,21 +40,11 @@
                             <h3 class="big-headline greet" style="font-family:'Chakra Petch'; font-weight: 600;">Hallo!</h3>
                             <h3 class="big-headline greet" style="font-family:'Chakra Petch'; font-weight: 600;">Hai!</h3>
                     </div>
-                    <div class="grid-cell centered alive name-title" >
-                        <div class="wrapper" id="name01">
-                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm</h3>
-                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">Rafdani</h3>
-                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm</h3>
-                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">e-nut</h3>
-                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm</h3>
-                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">Rafdani</h3>
-                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm</h3>
-                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">e-nut</h3>
-                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm</h3>
-                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">Rafdani</h3>
-                        </div>
-                        <div class="wrapper" id="name02">
-                           
+                    <div class="grid-cell grid-item alive name-title" >
+                        <div class="wrapper">
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">i'm dani</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm e-nut</h3>
+                            <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">i'm dani</h3>
                         </div>
                      </div>
                     <div class="grid-cell centered alive based-city">
