--- a/index.html
+++ b/index.html
@@ -68,14 +68,9 @@
                     </div>
             </div>
             <h5 class="small-headline" style="font-family: 'Inter';">this is small Headline</h5>
+            <h5 class="medium-headline" style="font-family: 'Inter';">this is small Headline</h5>
+            <h5 class="big-headline" style="font-family: 'Inter';">this is small Headline</h5>
 
-                <p style="font-family: 'Inter';">I'm Thobie, a Frontend Developer and a Warzone TryHard currently living in Germany. 
-                    Ive worked at medium sized agencies as a working student. As a problem solver, 
-                    i specialize in merging both design, content and code together to provide easy-to-use, 
-                    unique and beautiful responsive websites that 
-                    serve to connect people and ideas.Outside of the internet, 
-                    you can find me at the gym or in Verdansk.
-                </p>
         </div>
     </div>
 
