--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 2/1/span2/2;">10</div>
                 <div class="grid-cell grid-item centered kill-cell" id="trigger-frontend" style="grid-area: 2/4/3/5;">
                     <input autocomplete="off" id="progressSlider" type="range" min="0" max="1" value="0" step="0.1"/>
+                    <div class="wrapper-circle">
+                        <div class="circle-for-slider"></div>
+                        <div class="circle-for-slider"></div>
+                        <div class="circle-for-slider"></div>
+                    </div>
                 </div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 1/7/2/9;">12</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 1/6/2/7;">15</div>
@@ -34,7 +39,11 @@
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 4/5/5/7;">18</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 4/7/5/8;">19</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 3/8/4/9;">20</div>
-                <div class="grid-cell grid-item half-alive" id="trigger-frontend-mobile" style="grid-area: 5/3/6/4;">21</div>
+                <div class="grid-cell grid-item half-alive centered" id="trigger-frontend-mobile" style="grid-area: 5/3/6/4;">
+                    <div class="press-and-hold centered" style="height: 6.5rem; cursor: pointer;">
+                        <h4 class="small-headline" style="font-family:'Chakra Petch'; font-weight: 600; text-align: center;">press and hold</h4>
+                    </div>
+                </div>
 
                     <div class="grid-cell grid-item centered alive moin-title">
                             <h3 class="big-headline greet" style="font-family:'Chakra Petch'; font-weight: 600;">Moin!</h3>
@@ -43,7 +52,7 @@
                             <h3 class="big-headline greet" style="font-family:'Chakra Petch'; font-weight: 600;">Hai!</h3>
                     </div>
                     <div class="grid-cell grid-item alive name-title" >
-                        <div class="wrapper">
+                        <div class="wrapper-name">
                             <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">i'm dani</h3>
                             <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">I'm e-nut</h3>
                             <h3 class="big-headline nickname" id="raf" style="font-family:'Chakra Petch';font-weight: 600;">i'm dani</h3>
