--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 4/7/5/8;">19</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 3/8/4/9;">20</div>
                 <div class="grid-cell grid-item half-alive centered" id="trigger-frontend-mobile" style="grid-area: 5/3/6/4;">
-                    <div class="press-and-hold centered" style="height: 6.5rem; cursor: pointer;">
-                        <h4 class="small-headline" style="font-family:'Chakra Petch'; font-weight: 600; text-align: center;">press and hold</h4>
+                    <div class="press-and-hold centered" style="height: 6.5rem; ">
+                        <!-- <h4 class="small-headline" style="font-family:'Chakra Petch'; font-weight: 600; text-align: center;cursor: none;">press and hold</h4> -->
                     </div>
                 </div>
 
@@ -91,6 +91,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/TextPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/EasePack.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/CustomEase.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/EaselPlugin.min.js"></script>
     <script src="main_animation.js"></script>
 </body>
 
