user-select fixed!

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 4/5/5/7;">18</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 4/7/5/8;">19</div>
                 <div class="grid-cell grid-item kill-cell" style="grid-area: 3/8/4/9;">20</div>
-                <div class="grid-cell grid-item half-alive centered" id="trigger-frontend-mobile" style="grid-area: 5/3/6/4;">
-                    <div class="press-and-hold centered" style="height: 6.5rem; cursor: pointer; touch-action: none;">
-                        <h4 class="small-headline" style="font-family:'Chakra Petch'; font-weight: 600; text-align: center;touch-action: none;">press and hold</h4>
+                <div class="grid-cell grid-item half-alive centered" id="trigger-frontend-mobile" style="grid-area: 5/3/6/4; touch-action: none;">
+                    <div class="press-and-hold centered" style="height: 6.5rem; cursor: pointer; touch-action: none; pointer-events: none;">
+                        <h4 class="small-headline" style="font-family:'Chakra Petch'; font-weight: 600; text-align: center; touch-action: none; user-select: none;">press and hold</h4>
                     </div>
                 </div>
 
